regression-tests/test-results/clang-12/pure2-last-use.cpp.output
pure2-last-use.cpp2:938:44: error: a lambda expression cannot appear in this context
    static_cast<void>([_0 = std::array<int,[](auto const& x) mutable -> auto { return identity(x); }(0)>()]() mutable -> auto { return _0;  });
                                           ^
1 error generated.
